Event-Driven-Arch/10-network-policy.yaml
apiVersion: v1
kind: List
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: cp-kafka-network-policy
  spec:
    podSelector:
      matchLabels:
        app: cp-kafka
    ingress:
    - {}
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: cp-zookeeper-network-policy
  spec:
    podSelector:
      matchLabels:
        app: cp-zookeeper
    ingress:
    - {}
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: cp-kafka-rest-network-policy
  spec:
    podSelector:
      matchLabels:
        app: cp-kafka-rest
    ingress:
    - {}
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: prometheus-network-policy
  spec:
    podSelector:
      matchLabels:
        app: prometheus
    ingress:
    - {}
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: elasticsearch-network-policy
  spec:
    podSelector:
      matchLabels:
        app: elasticsearch
    ingress:
    - {}
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: nifi-network-policy
  spec:
    podSelector:
      matchLabels:
        app: nifi
    ingress:
    - {}
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: grafana-network-policy
  spec:
    podSelector:
      matchLabels:
        app: grafana
    ingress:
    - {}
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: kibana-network-policy
  spec:
    podSelector:
      matchLabels:
        app: kibana
    ingress:
    - {}
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: cp-ksql-server-network-policy
  spec:
    podSelector:
      matchLabels:
        app: cp-ksql-server
    ingress:
    - {}
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: cp-kafka-connect-network-policy
  spec:
    podSelector:
      matchLabels:
        app: cp-kafka-connect
    ingress:
    - {}
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: cp-kafka-schema-registry-network-policy
  spec:
    podSelector:
      matchLabels:
        app: cp-kafka-schema-registry
    ingress:
    - {}
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: cp-control-center-network-policy
  spec:
    podSelector:
      matchLabels:
        app: cp-control-center
    ingress:
    - {}
